tests/negative/runtime/glyphat_empty_string/input.ci
void main() {
    print(glyphAt("", 0) + "\n");
}
